{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "GamePlay",
            "id": "c1dbf6f3-f68f-4c63-8ee0-bdba2138fb7a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "94e3b0cb-a30c-495e-b574-d7639d768b8f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "3dc9c38e-2b53-49cc-9eb6-f1d2834841a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Counter",
                    "type": "Button",
                    "id": "d2134617-ba75-437c-b1fe-53cdc32ecff0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e6ec4707-8451-4390-a3bb-50457d984241",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "7457c288-71ad-47c9-9de4-b80bb317f041",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2c71ce49-b72c-442a-9411-876e7e309ae3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a0908be8-a381-48aa-a4e1-5717cefd2461",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4cb6ac05-e203-4a81-aa37-539142686a52",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f5d88da1-48b5-481c-a8ec-e21466b411a7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "9b21bc27-5c9b-4215-9534-42601c8fe616",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9357be92-abe7-44e8-97a7-4bd304737d77",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "20bda40b-3931-4cba-b9ee-411e45fef70f",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "566541bd-845b-4b0d-bc63-dafbb6ecf9a7",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e6b193b3-6057-412f-878c-855dbc44b7c5",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "b518c8d0-b7c8-4414-9480-910764635229",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "11c13553-cc4b-4527-b906-3a5c748f9a61",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "75b502c1-281c-4282-8e93-7022bca88629",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "76ac1d3b-56cc-4927-95d7-8d90a5ce4152",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "63dc7adc-bf69-44b0-97bf-162a805c90f1",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "69727c60-5671-4303-8028-a76bf9123400",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffad83a0-af28-49ec-99f0-b2da3ec830bb",
                    "path": "<Keyboard>/slash",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8cc869b9-21b0-4c85-927d-60cc6b571256",
                    "path": "<Keyboard>/6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "342dddee-2ead-4677-899f-bf039e270e96",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a681a2b3-506c-420b-a9de-7988cd1c0728",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Counter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56e18130-e185-4250-97d0-d656aec05a71",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard1",
                    "action": "Counter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fb2c4b2-3c0a-41ed-b922-92e0c71d5c70",
                    "path": "<Keyboard>/period",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard2",
                    "action": "Counter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc83fee6-ec79-4a3f-b544-90dfa30f096d",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard3",
                    "action": "Counter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard1",
            "bindingGroup": "Keyboard1",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard2",
            "bindingGroup": "Keyboard2",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard3",
            "bindingGroup": "Keyboard3",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}